--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOUNCHTIMES</title>
+    <link rel="icon" href="/public/패비콘.ico" />
   </head>
   <body>
-    <h1>HELLO LOUNCHTIMES</h1>
+    <div>
+      <a href="https://instagram.com/lounchtimes?igshid=MzRlODBiNWFlZA==">
+        <img src="/public/IMG.png"
+      /></a>
+    </div>
   </body>
+  <style>
+    body {
+      text-align: center;
+    }
+  </style>
 </html>
