--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LOUNCHTIMES</title>
-    <link rel="icon" href="/public/패비콘.ico" />
+    <link rel="icon" href="/public/favicon.ico" />
   </head>
   <body>
     <div>
