--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="LOUNCHTIMES" />
+    <meta property="og:description" content="LOUNCHTIMES" />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/80323356/265477888-3b3d0c32-54b2-41c6-84f6-aa730a7ed066.jpg"
+    />
+    <meta property="og:url" content="lounchtimes.com" />
+    <meta name="Robots" content="all" />
     <title>LOUNCHTIMES</title>
     <link rel="icon" href="/public/favicon.ico" />
   </head>
